<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorGrayBackground"
        android:orientation="vertical">

        <ImageView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:src="@drawable/pokemon_team"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrayStroke"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight="1">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/m_text_size"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/l_margin"
                android:layout_marginRight="@dimen/l_margin"
                android:layout_marginBottom="@dimen/l_margin"
                android:text="@string/description_sign_up"/>

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/blue_button"
                android:textColor="@color/white"
                android:layout_margin="@dimen/m_margin"
                android:text="@string/sign_up_now"/>

            <TextView
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/m_margin"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/already_account"/>


        </LinearLayout>
    </RelativeLayout>



</LinearLayout>
