<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.Authentication.SignUp.Name.NameActivity">

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_marginTop="-70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/xxl_margin"
            android:layout_marginLeft="@dimen/xxl_margin"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whats_your_name"
                android:textSize="@dimen/l_text_size"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/m_margin"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/l_margin"
                android:layout_marginBottom="@dimen/m_margin"
                android:src="@drawable/user"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/l_margin"
                android:layout_marginRight="@dimen/l_margin"
                android:layout_marginBottom="@dimen/m_margin">
                <EditText
                    android:id="@+id/name_edidtext"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="@dimen/m_margin"
                    android:paddingRight="70dp"
                    android:background="@drawable/dashed_edittext"
                    android:layout_alignParentLeft="true"
                    android:inputType="textCapWords|textFilter"/>
                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/s_margin"
                    android:layout_marginTop="@dimen/s_margin"
                    android:layout_marginBottom="@dimen/s_margin"
                    android:layout_alignParentRight="true">
                    <Button
                        android:visibility="gone"
                        android:id="@+id/ok_btn"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/green_button"
                        android:text="@string/ok"
                        android:textColor="@color/white"/>
                    <ImageView
                        android:id="@+id/keyboard_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/keyboard"/>
                </FrameLayout>

            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/m_margin"
            android:layout_marginLeft="@dimen/m_margin"
            android:layout_marginTop="@dimen/s_margin"
            android:layout_marginBottom="@dimen/s_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="@dimen/xs_margin"
                android:layout_marginBottom="@dimen/xs_margin"
                android:layout_marginLeft="@dimen/l_margin"
                android:textColor="@color/white"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/m_margin"
                android:layout_marginLeft="@dimen/l_margin"
                style="@style/horizontal_progress_bar"
                android:progressDrawable="@drawable/green_progress"
                android:progress="50"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/s_margin"
            android:layout_weight="2">
            <ImageButton
                android:id="@+id/previous_btn"
                android:layout_weight="1"
                android:layout_width="@dimen/next_button_side"
                android:layout_height="@dimen/next_button_side"
                android:src="@drawable/ic_keyboard_arrow_up_blue_24dp"
                android:background="@drawable/arrow_button"
                android:layout_marginRight="@dimen/s_margin"/>
            <ImageButton
                android:id="@+id/next_btn"
                android:layout_weight="1"
                android:layout_width="@dimen/next_button_side"
                android:layout_height="@dimen/next_button_side"
                android:src="@drawable/ic_keyboard_arrow_down_blue_24dp"
                android:background="@drawable/arrow_button"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
